data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1508.wast
;; 9. **Test Description:**    - Within an `if` block, an `unreachable` is placed before a `call_indirect`. The result ensures that an improper indirect call and subsequent execution do not occur.    - **Constraint:** Guarantees conditional traps before indirect calls.    - **Improper Function Call or Return Handling:** Validates handling of conditional indirect calls.

(assert_invalid
  (module
    (func (result i32)
      (if (i32.eqz (i32.const 0))
        (unreachable)
        (call_indirect (type 0))
      )
    )
    (type (func (result i32)))
  )
  "type mismatch"
)